fixing wrap size for big thumb images

--- a/public/stylesheets/msg_style.css
+++ b/public/stylesheets/msg_style.css
@@ -1,6 +1,6 @@
 .msg_slideshow {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 600px;
   padding: 10px;
   position: relative;
   overflow: hidden;
@@ -14,8 +14,8 @@
       border: none; }
 
 .msg_wrapper {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 600px;
   position: relative;
   margin: 0;
   padding: 0;
